Create & link encrypt view, url & template.

--- a/caesarapp/templates/caesarapp/index.html
+++ b/caesarapp/templates/caesarapp/index.html
@@ -1,9 +1,10 @@
 <html>
     <head>
-        <title>Caesar's Cipher</title>
+	   <title>Caesar's Cipher</title>
     </head>
     <body>
-        <p>Enter the text you want to encrypt</p>
-		<p>Enter the encryption key</p>
+		<a href="{% url 'encrypt' %}"> Encryption </a>
+		
     </body>
 </html>
+
