proper encrypted.html file

--- a/caesarapp/templates/caesarapp/encrypted.html
+++ b/caesarapp/templates/caesarapp/encrypted.html
@@ -1,19 +1,1 @@
-<h1>{{ input.question_text }}</h1>
-
-<ul>
-{% for choice in question.choice_set.all %}
-    <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
-{% endfor %}
-</ul>
-
-<a href="{% url 'polls:detail' question.id %}">Vote again?</a>
-
-<html>
-    <head>
-	   <title>Nu esti normal</title>
-    </head>
-    <body>
-		<a href="{% url 'encrypt' %}"> again </a>
-
-    </body>
-</html>
+<h1> Encrypted {{ userInput.plain_text }} with key {{ userInput.encryption_key }}: {{ encrypted }}</h1>
