basic history view displaying user input in chronological order

--- a/caesarapp/templates/caesarapp/index.html
+++ b/caesarapp/templates/caesarapp/index.html
@@ -4,7 +4,8 @@
     </head>
     <body>
 		<a href="{% url 'encrypt' %}"> Encryption </a>
-		
+        <P></P>
+        <a href="{% url 'history' %}"> History </a>
     </body>
 </html>
 
